Добавлены практические задачи

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <label>
+    <!-- <label>
       Введите число
       <input class="js-value" type="number" />
     </label>
     <button class="js-add-value" type="button">Добавить в массив</button>
-    <button class="js-calculate" type="button">Посчитать сумму</button>
+    <button class="js-calculate" type="button">Посчитать сумму</button> -->
 
     <!-- <script type="module" src="./js/task-1.js"></script> -->
     <!-- <script type="module" src="./js/task-2.js"></script> -->
@@ -19,6 +19,7 @@
     <!-- <script type="module" src="js/task-4.js"></script> -->
     <!-- <script type="module" src="js/task-5.js"></script> -->
     <!-- <script typse="module" src="js/task-6.js"></script> -->
-    <script type="module" src="js/task-7.js"></script>
+    <!-- <script type="module" src="js/task-7.js"></script> -->
+    <script type="module" src="./js/test.js"></script>
   </body>
 </html>
