Применяет деструктуризацию обьекта для одного из методов

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- <script type="module" src="js/task-4.js"></script> -->
     <!-- <script type="module" src="js/task-5.js"></script> -->
     <!-- <script typse="module" src="js/task-6.js"></script> -->
-    <!-- <script type="module" src="js/task-7.js"></script> -->
-    <script type="module" src="./js/test.js"></script>
+    <script type="module" src="js/task-7.js"></script>
+    <!-- <script type="module" src="./js/test-arr.js"></script> -->
+    <!-- <script type="module" src="./js/test-object.js"></script> -->
   </body>
 </html>
